[metadata]
name = twistpy
version = 0.0.1
description = Toolbox for Wavefield Inertial Sensing Techniques
long_description = file: README.rst
keywords = seismology, signal processing, polarization analysis, polarization filtering
license = BSD 3-Clause License
classifiers =
    Framework :: Django
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    scipy
    numpy

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
python_files = pytests/*.py